--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
@@ -261,5 +261,6 @@ var loaderPath= "";
                 </fieldset>
 </div><!--columna izq -->
 
+<div id="modificar-datos-usuario" class="modal hide fade bigModal"></div>
 
 
