--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuarioResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuarioResult.tmpl
@@ -26,7 +26,7 @@
                                         id              => "tablaResult",
                                         class           => "",
                                         selectAll_id    => "",
-                                        columns         => ['[% "Tarjeta Id." | i18n %]','[% 'Imagen para mostrar' | i18n %]',
+                                        columns         => ['[% "Tarjeta Id." | i18n %]','[% 'Foto' | i18n %]',
                                                             '[% "Apellido y Nombres" | i18n %]','[% "Documento" | i18n %]',
                                                             '[% "Legajo" | i18n %]','[% "Cat." | i18n %]','[% "Prest." | i18n %]',
                                                             '[% "Ven." | i18n %]','[% "Estado" | i18n %]'
